Update notebook and documentation

--- a/Spectrohelioscope.ipynb
+++ b/Spectrohelioscope.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "id": "1472d774",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install --upgrade pandas numpy matplotlib openpyxl ipywidgets scipy"
+    "%pip install --upgrade pandas numpy matplotlib openpyxl ipywidgets scipy"
    ]
   },
   {
@@ -48,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98ce3811a74b48c48a82986ded5959a7",
+       "model_id": "f3616693fd584123bb7f53232ec51d2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29b940a9738d44229aa90d04f6165759",
+       "model_id": "d090cf5f2a4a4ddebf54322854d78a41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,7 +76,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f6292a180dd4c80862aadf269a66bfb",
+       "model_id": "0967a1efc27b419c8715e062ef3af976",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "id": "2b396328",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f8418efa1e04bc58ab6b23e43f95c95",
+       "model_id": "7d90fda8ef424819a1dfa954e640da16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23208e0a054f4c8dabe089e8c2f58cd2",
+       "model_id": "dc1b675537d54730a71241184e5180fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "id": "cdb4ae35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "029cc616f5b5485aa4f06eb07fbf3ff0",
+       "model_id": "976b66a5baee4e6695715a3fcf08e499",
        "version_major": 2,
        "version_minor": 0
       },
@@ -288,7 +288,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1109db11087547c08bd3aa7988118277",
+       "model_id": "87b620ae196e412787b1a19bf5e5df4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,14 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "15d47664",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd45c4ffed154c34b8767b16e52276e4",
+       "model_id": "c5a551b7cc8b41ddaea475a47fb0aaee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -419,7 +419,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "439d1842284a4e25b3ffbdeb7b94f283",
+       "model_id": "c86a044b4dc24265a9b56828327e9c11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -433,7 +433,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05ae58607d0246bb88f263d358037f76",
+       "model_id": "0b90d212668f4a67bc41532d26a5e38b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,14 +554,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 11,
    "id": "3ed71419",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea8863f09fc64d6faa3c5b2b447facfa",
+       "model_id": "06901762df6f48caac9f64b2627c6d0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -575,12 +575,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1823927a40b54299a458cf951d06deb2",
+       "model_id": "174af52d38e440a88aa2c57978e6f5ef",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatText(value=4.0, description='Slit Height (mm):', style=DescriptionStyle(description_width='auto'))"
+       "FloatText(value=4.5, description='Slit Height (mm):', style=DescriptionStyle(description_width='auto'))"
       ]
      },
      "metadata": {},
@@ -589,7 +589,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4439516fef0f4002b99eab0819db5a8e",
+       "model_id": "1a2c20c4a3574ae88db9e61d2304ccd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -603,7 +603,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d56db918f5d34c129f861e96a12acddf",
+       "model_id": "414853d165fc43019d4270ba58da1463",
        "version_major": 2,
        "version_minor": 0
       },
@@ -628,7 +628,7 @@
     "\n",
     "# Input for Slit Height (mm)\n",
     "slit_height = widgets.FloatText(\n",
-    "    value=4.0,  # Default height in millimeters\n",
+    "    value=4.5,  # Default height in millimeters\n",
     "    description=\"Slit Height (mm):\",\n",
     "    style={\"description_width\": \"auto\"}\n",
     ")\n",
@@ -802,14 +802,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "id": "0953d3dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a319ca0c50074364bb9c76d139452043",
+       "model_id": "cd66cd50b5324a55acd1b14914aca2d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1006,6 +1006,7 @@
     "update_grating_output()\n",
     "\n",
     "try:\n",
+    "    # type: ignore[name-defined]\n",
     "    update_camera_values()\n",
     "except:\n",
     "    pass  # camera block may not be loaded yet\n"
@@ -1114,14 +1115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "id": "4ca2b66d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a1d30ccf27a42efbea7de6d29f4834d",
+       "model_id": "da6feb2c22c344a5b51eb87bd735f68a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1135,7 +1136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef9875c0812f4c1a9b27c7454b3e80bc",
+       "model_id": "94a21fb37c5c4650a227125e06c551c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1149,7 +1150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47b8babe5e1d43b1bd10938e2ab4bb30",
+       "model_id": "7ea95b3d9c8648858b085f26714c4101",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1246,6 +1247,7 @@
     "print(\"Collimator diameter:\", collimator_diameter)\n",
     "\n",
     "try:\n",
+    "    # type: ignore[name-defined]\n",
     "    update_camera_values()\n",
     "except:\n",
     "    pass\n"
@@ -1273,14 +1275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 10,
    "id": "4d954a1a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0b58281a3e74609b42614909d4b3a64",
+       "model_id": "57b9763c081640a691951c78502871e6",
        "version_major": 2,
        "version_minor": 0
       },
