Add clean version of spectrohelioscope notebook with stable widgets for local vs code use

--- a/Spectrohelioscope_local.ipynb
+++ b/Spectrohelioscope_local.ipynb
@@ -1,38 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "c2431384",
-   "metadata": {},
-   "source": [
-    "⚠️ **Colab Users Only:**  \n",
-    "If you're running this notebook in [Google Colab](https://colab.research.google.com), run the next cell to install dependencies and enable widgets.\n",
-    "\n",
-    "✅ Local users: skip this cell.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "H6w-Vn5hxbn9",
-   "metadata": {
-    "id": "H6w-Vn5hxbn9"
-   },
-   "source": [
-    "⚠️ **If you just installed packages above, you may need to `Runtime → Restart and Run All` to activate widgets and updated libraries.**\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "58D1K1D3xihW",
-   "metadata": {
-    "id": "58D1K1D3xihW"
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "id": "5be67e81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6fc85e429b1147788753189d983d9c71",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='Loading widget support…')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Run this to restart the kernel in Colab if needed\n",
-    "import os\n",
-    "os.kill(os.getpid(), 9)\n"
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# Invisible warm-up widget\n",
+    "dummy = widgets.HTML(\"Loading widget support…\")\n",
+    "display(dummy)\n",
+    "\n",
+    "# Some global cache for previous inputs\n",
+    "last_camera_inputs = {}"
    ]
   },
   {
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "adcc4f76",
    "metadata": {
     "cellView": "form",
@@ -103,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7efff26d37b4ee9b1cf1971535d952d",
+       "model_id": "3a4cdcd096904a5bb4405ea8d14bd785",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71c30d7235c84a28965bcc9945218fc5",
+       "model_id": "0ffd3f0ea474428ab824bec0f311fe91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cae6ac2fd41c487eaf74d74d15394d28",
+       "model_id": "bfebc9bcb6e34084b0dd1c78ba68ccb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,7 +188,7 @@
     "display(calc_button)\n",
     "\n",
     "# Automatically compute once at load\n",
-    "calculate_focal_ratio()\n"
+    "calculate_focal_ratio()"
    ]
   },
   {
@@ -213,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2b396328",
    "metadata": {
     "cellView": "form",
@@ -235,7 +233,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5862f826036144518c07a3488c6b5d07",
+       "model_id": "864c2795a47240e5b892d4b68fead428",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6138e43a92dc49868eef08228f57e86b",
+       "model_id": "7fb588795ebc40b0bdbd9db4f9e4fce5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "cdb4ae35",
    "metadata": {
     "cellView": "form",
@@ -365,7 +363,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79115eb7196342c8874eccd3c00179ef",
+       "model_id": "9c457ffc93dd4ceb987bd91cdff617b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -379,7 +377,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ad8b5f7e12344e8881e9fc566a61d2d",
+       "model_id": "2e4348198fcd47769c96344f4a612174",
        "version_major": 2,
        "version_minor": 0
       },
@@ -492,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "15d47664",
    "metadata": {
     "cellView": "form",
@@ -517,7 +515,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f4a9433067b4371a1de0b8ec20afc24",
+       "model_id": "ff5ac3c2bc4146f7bda6e9f04ade9a14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -531,7 +529,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7f892fbffe441f68f8709d0aa9642b0",
+       "model_id": "b1a57c4f808449908a790137b83a6981",
        "version_major": 2,
        "version_minor": 0
       },
@@ -545,7 +543,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "320b86c88da04757ac12953aa9b08886",
+       "model_id": "f0be435f5ba74546beabeb44aaa67c59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3ed71419",
    "metadata": {
     "cellView": "form",
@@ -697,7 +695,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a902b2cf00284355888bec2ddd297830",
+       "model_id": "3b6ec16d4a29489fadfc5a6955b75587",
        "version_major": 2,
        "version_minor": 0
       },
@@ -711,7 +709,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f8fc5db099c4c1c8664276dcaf5a571",
+       "model_id": "3533f662fc6248078e255b7334b7fca3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -725,7 +723,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fefe25f626e4c27a37f96e26be21425",
+       "model_id": "7ae8dcd495534abd84bbcbf45314df15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -739,7 +737,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d668c939779432da2c964b53186a426",
+       "model_id": "b1ca90878a034071a9d7d590986769fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -943,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "0953d3dd",
    "metadata": {
     "cellView": "form",
@@ -958,7 +956,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78cf36831fce43a987927f6334a7ebfa",
+       "model_id": "b8e2b4c27492442680002f8bad58c168",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1153,13 +1151,7 @@
     "    grating_output\n",
     "]))\n",
     "\n",
-    "update_grating_output()\n",
-    "\n",
-    "try:\n",
-    "    # type: ignore[name-defined]\n",
-    "    update_camera_values()\n",
-    "except:\n",
-    "    pass  # camera block may not be loaded yet\n"
+    "update_grating_output()\n"
    ]
   },
   {
@@ -1218,8 +1210,8 @@
     "\n",
     "Where:\n",
     "\n",
-    "- \\( \\theta \\): angular resolution in **radians**  \n",
-    "- \\( \\lambda \\): wavelength of light (e.g., 656.3 nm for Hydrogen Alpha)  \n",
+    "- \\( $\\theta$ \\): angular resolution in **radians**  \n",
+    "- \\( $\\lambda$ \\): wavelength of light (e.g., 656.3 nm for Hydrogen Alpha)  \n",
     "- \\( D \\): collimator lens diameter\n",
     "\n",
     "To convert to arcseconds:\n",
@@ -1267,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "4ca2b66d",
    "metadata": {
     "cellView": "form",
@@ -1277,7 +1269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b39706bd11f4d64ba721ef90f05b551",
+       "model_id": "0d78e7c06852489b92e8f5a6d6d8b2ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1291,7 +1283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17c30d4d8e0b4fd3b285f2fecce0c3fb",
+       "model_id": "4bd4dc4f476043cdac0603bc25348c8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1305,7 +1297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8509e72c737a443e82c5046f6d44e780",
+       "model_id": "87769bc8259944c6926606b5ee8ceb7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1325,6 +1317,7 @@
     }
    ],
    "source": [
+    "global collimator_diameter, grating_result_theta_i, grating_result_theta_d, theta_d_lambda_min, theta_d_lambda_max\n",
     "# @title\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display, Markdown\n",
@@ -1400,13 +1393,7 @@
     "\n",
     "# Perform initial calculation (if necessary parameters are already set)\n",
     "update_collimator_values()\n",
-    "print(\"Collimator diameter:\", collimator_diameter)\n",
-    "\n",
-    "try:\n",
-    "    # type: ignore[name-defined]\n",
-    "    update_camera_values()\n",
-    "except:\n",
-    "    pass\n"
+    "print(\"Collimator diameter:\", collimator_diameter)\n"
    ]
   },
   {
@@ -1433,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "4d954a1a",
    "metadata": {
     "cellView": "form",
@@ -1443,7 +1430,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03e34e35d2f64c698ee6fe502859dc56",
+       "model_id": "8da231ba9bad49a7b8cffb8ad90e0c63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1466,6 +1453,7 @@
     }
    ],
    "source": [
+    "global collimator_diameter, grating_result_theta_i, grating_result_theta_d, theta_d_lambda_min, theta_d_lambda_max\n",
     "# @title\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display, Markdown\n",
@@ -1558,19 +1546,28 @@
     "\n",
     "# Update function\n",
     "def update_camera_values(change=None):\n",
-    "    global collimator_diameter, grating_result_theta_i, grating_result_theta_d, theta_d_lambda_min, theta_d_lambda_max\n",
+    "    global last_camera_inputs\n",
+    "    global collimator_diameter, grating_result_theta_i, grating_result_theta_d\n",
+    "    global theta_d_lambda_min, theta_d_lambda_max\n",
     "\n",
     "    with camera_output:\n",
     "        camera_output.clear_output()\n",
     "\n",
-    "        # Get user inputs\n",
-    "        f_camera = camera_focal_length_widget.value\n",
-    "        D_camera = camera_actual_diameter_widget.value\n",
-    "\n",
-    "        # Validate required global inputs\n",
-    "        if None in [collimator_diameter, grating_result_theta_i, grating_result_theta_d]:\n",
+    "        # If inputs aren't ready, skip\n",
+    "        if any(v is None for v in [collimator_diameter, grating_result_theta_i, grating_result_theta_d]):\n",
     "            print(\"⚠️ Required values not yet defined (collimator or grating geometry missing).\")\n",
     "            return\n",
+    "\n",
+    "        # Gather current inputs\n",
+    "        f_camera = camera_focal_length_widget.value\n",
+    "        D_camera = camera_actual_diameter_widget.value\n",
+    "        current_inputs = (collimator_diameter, grating_result_theta_i, grating_result_theta_d, f_camera, D_camera)\n",
+    "\n",
+    "        # If inputs haven't changed, skip\n",
+    "        if current_inputs == last_camera_inputs.get(\"values\"):\n",
+    "            return\n",
+    "\n",
+    "        last_camera_inputs[\"values\"] = current_inputs  # Update cache\n",
     "\n",
     "        try:\n",
     "            theta_i = np.radians(grating_result_theta_i)\n",
@@ -1638,8 +1635,6 @@
     "            groove_density=groove_density_widget.value,\n",
     "            D_camera=D_camera\n",
     "        )\n",
-    "\n",
-    "\n",
     "    except Exception as e:\n",
     "        print(\"⚠️ Could not generate coverage plot.\")\n",
     "        print(str(e))\n",
@@ -1656,7 +1651,7 @@
     "]))\n",
     "\n",
     "# Run once on load\n",
-    "update_camera_values()\n"
+    "update_camera_values()"
    ]
   },
   {
